Updated README
Updated README to reflect the first release.